--- a/index.html
+++ b/index.html
@@ -11,15 +11,117 @@
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- NAVBAR: desktop + mobile (blur kaca) -->
+  <!-- ====== HERO FX: semua efek putih fokus di logo ====== -->
+  <style>
+    /* Section hero full hitam dan rapi */
+    .km-hero{position:relative;overflow:hidden;background:#000;isolation:isolate}
+
+    /* Wrapper logo (posisi tengah layar) */
+    .km-logo-wrap{position:absolute;inset:0;display:grid;place-items:center;pointer-events:none}
+    .km-logo-frame{
+      position:relative;
+      width:min(88vw,1100px);
+      aspect-ratio:16/7;
+      background:#000;    /* dasar logo hitam pekat */
+      contain:paint;
+    }
+
+    /* Gambar logo dasar (agar bentuk terlihat) */
+    .km-logo-base{
+      position:absolute;inset:0;width:100%;height:100%;
+      object-fit:contain;opacity:.26; /* redup saja */
+    }
+
+    /* ====== Efek cahaya HANYA di area logo ======
+       semua efek dibatasi oleh mask logo_hd.png (bukan seluruh layar) */
+    .km-logo{
+      position:absolute; inset:0;
+      /* pakai gambar logo sebagai MASK */
+      -webkit-mask-image: url('images/logo_hd.png');
+      mask-image: url('images/logo_hd.png');
+      -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat;
+      -webkit-mask-position: center 50%;  mask-position: center 50%;
+      -webkit-mask-size: contain;         mask-size: contain;
+      mask-mode: luminance;
+      display:block;
+      mix-blend-mode:screen;
+    }
+
+    /* SUNBRUSH / flare elegan di ujung kiri & kanan logo (putih) */
+    .km-logo::before{
+      content:""; position:absolute; inset:0;
+      background:
+        radial-gradient(120px 70px at 22% 62%, rgba(255,255,255,.96), rgba(255,255,255,.20) 55%, transparent 70%),
+        radial-gradient(120px 70px at 78% 62%, rgba(255,255,255,.96), rgba(255,255,255,.20) 55%, transparent 70%);
+      filter: contrast(1.06) saturate(1.05);
+      opacity:.95;
+    }
+
+    /* Garis sweep putih tajam melintas DI DALAM logo (tanpa blur) */
+    @keyframes km-logo-sweep {
+      0%   { transform: translateX(-120%) skewX(-10deg); opacity: 0; }
+      10%  { opacity:.95; }
+      50%  { transform: translateX(120%)  skewX(-10deg); opacity: 0; }
+      100% { opacity:0; }
+    }
+    .km-logo::after{
+      content:""; position:absolute;
+      top:30%; bottom:32%;   /* tinggi garis, pas di tengah logo */
+      left:-22%; width:18%;
+      background: linear-gradient(90deg,
+        transparent 0%,
+        #ffffff 46%,
+        #ffffff 54%,
+        transparent 100%);
+      transform: skewX(-10deg);
+      animation: km-logo-sweep 7.2s ease-in-out infinite;
+      opacity:.95;
+    }
+
+    /* Glow outline putih halus di pinggir logo (drop-shadow berlapis) */
+    .km-logo-glow{
+      position:absolute; inset:0; width:100%; height:100%; object-fit:contain; opacity:.9;
+      filter:
+        drop-shadow(0 0 3px #fff)
+        drop-shadow(0 0 8px #fff)
+        drop-shadow(0 0 16px #fff)
+        drop-shadow(0 0 26px #fff);
+      mix-blend-mode:screen;
+      animation:km-glowPulse 3.6s ease-in-out infinite;
+      -webkit-mask-image: url('images/logo_hd.png'); mask-image: url('images/logo_hd.png');
+      -webkit-mask-repeat:no-repeat; mask-repeat:no-repeat;
+      -webkit-mask-position:center 50%; mask-position:center 50%;
+      -webkit-mask-size:contain; mask-size:contain;
+    }
+    @keyframes km-glowPulse{
+      0%,100%{filter:drop-shadow(0 0 3px #fff) drop-shadow(0 0 8px #fff) drop-shadow(0 0 16px #fff) drop-shadow(0 0 26px #fff)}
+      50%    {filter:drop-shadow(0 0 1px #fff) drop-shadow(0 0 5px #fff) drop-shadow(0 0 11px #fff) drop-shadow(0 0 18px #fff)}
+    }
+
+    /* Vignette lembut (tipis) agar elegan */
+    .km-hero-vignette{
+      position:absolute; inset:0; pointer-events:none;
+      background:
+        radial-gradient(900px 420px at 50% 55%, rgba(255,255,255,.07), transparent 60%),
+        radial-gradient(1400px 800px at 50% -10%, rgba(0,0,0,.6), transparent 70%);
+    }
+
+    /* mobile touch */
+    @media (max-width:640px){
+      .km-logo::after{ top:34%; bottom:36%; left:-28%; width:22%; }
+    }
+  </style>
+</head>
+
+<body class="bg-black text-gray-200 font-sans">
+
+  <!-- NAVBAR -->
   <nav class="sticky top-0 z-50 bg-black/40 backdrop-blur-xl border-b border-white/10">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
-      <!-- Logo -->
       <a href="#home" class="flex items-center">
         <img src="images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
       </a>
 
-      <!-- Menu Desktop -->
       <ul class="hidden md:flex items-center gap-8 text-sm font-medium">
         <li><a href="#home" class="hover:text-white">Home</a></li>
         <li><a href="#profile" class="hover:text-white">Profile</a></li>
@@ -28,17 +130,14 @@
         <li><a href="#contact" class="hover:text-white">Contact</a></li>
       </ul>
 
-      <!-- Tombol Mobile -->
       <button id="menuBtn"
         class="md:hidden inline-flex items-center justify-center rounded-md p-2 hover:bg-white/10 focus:outline-none focus:ring-2 focus:ring-white/30"
         aria-label="Toggle navigation" aria-expanded="false">
-        <!-- icon burger -->
         <svg id="iconOpen" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
               viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
                 d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
-        <!-- icon close -->
         <svg id="iconClose" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none"
               viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
@@ -47,7 +146,6 @@
       </button>
     </div>
 
-    <!-- Panel Menu Mobile -->
     <div id="menuPanel" class="md:hidden hidden">
       <div class="px-4 sm:px-6 pb-4">
         <ul class="space-y-2 text-sm font-medium bg-black/60 backdrop-blur-xl rounded-xl p-3 border border-white/10">
@@ -61,125 +159,48 @@
     </div>
   </nav>
 
-   <!-- HERO (ganti seluruh section lama) -->
-<section id="home" class="relative min-h-[100svh] flex items-center justify-center text-center overflow-hidden bg-black pt-24">
+  <!-- ===== HERO ===== -->
+  <section id="home" class="km-hero min-h-[100svh] flex items-center justify-center text-center pt-24">
 
-  <!-- ====== FX LOGO (SVG) — semua efek hanya di area logo ====== -->
-  <div class="absolute inset-0 grid place-items-center pointer-events-none">
-    <!-- Atur ukuran logo via width/max-w -->
-    <svg viewBox="0 0 1600 700" class="w-[88vw] max-w-[1100px]">
-      <defs>
-        <!-- ====== GUNAKAN FILE SVG LOGO ====== -->
-        <!-- Ubah href ke lokasi file SVG milikmu -->
-        <image id="logoSrc" href="images/mettalic.svg"
-               x="0" y="0" width="1600" height="700"
-               preserveAspectRatio="xMidYMid meet" />
+    <!-- Efek logo (hanya di area logo) -->
+    <div class="km-logo-wrap">
+      <div class="km-logo-frame">
+        <!-- base shape -->
+        <img src="images/logo_hd.png" alt="" class="km-logo-base" aria-hidden="true">
+        <!-- glow halus di outline (di-mask ke logo) -->
+        <img src="images/logo_hd.png" alt="" class="km-logo-glow" aria-hidden="true">
+        <!-- sunbrush + sweep (di-mask ke logo) -->
+        <div class="km-logo" aria-hidden="true"></div>
+      </div>
+    </div>
 
-        <!-- Mask supaya efek hanya muncul di bentuk logo -->
-        <mask id="logoMask" maskUnits="userSpaceOnUse">
-          <!-- Versi solid (putih penuh) dari logo -->
-          <image href="images/mettalic.svg"
-                 x="0" y="0" width="1600" height="700"
-                 preserveAspectRatio="xMidYMid meet" />
-        </mask>
+    <!-- Vignette tipis -->
+    <div class="km-hero-vignette"></div>
 
-        <!-- Filter glow putih elegan (multi blur + merge) -->
-        <filter id="softGlow" x="-30%" y="-30%" width="160%" height="160%" color-interpolation-filters="sRGB">
-          <feImage href="images/mettalic.svg" x="0" y="0" width="1600" height="700" preserveAspectRatio="xMidYMid meet" result="src"/>
-          <!-- Ubah jadi putih -->
-          <feColorMatrix in="src" type="matrix" values="
-            0 0 0 0 1
-            0 0 0 0 1
-            0 0 0 0 1
-            0 0 0 1 0" result="whiteLogo"/>
-          <!-- beberapa layer blur untuk aura -->
-          <feGaussianBlur in="whiteLogo" stdDeviation="1.2" result="g1"/>
-          <feGaussianBlur in="whiteLogo" stdDeviation="3.5" result="g2"/>
-          <feGaussianBlur in="whiteLogo" stdDeviation="8"   result="g3"/>
-          <feMerge>
-            <feMergeNode in="g1"/>
-            <feMergeNode in="g2"/>
-            <feMergeNode in="g3"/>
-          </feMerge>
-          <!-- sedikit boost opacity -->
-          <feComponentTransfer>
-            <feFuncA type="gamma" amplitude="1" exponent="0.75" offset="0"/>
-          </feComponentTransfer>
-        </filter>
+    <!-- Konten Hero -->
+    <div class="relative z-10 max-w-3xl px-4">
+      <h2 class="text-4xl sm:text-5xl md:text-7xl font-extrabold text-white leading-tight mb-4 sm:mb-6 drop-shadow-lg">
+        The void <br class="hidden sm:block"> speaks through my art
+      </h2>
+      <p class="text-gray-300 text-base sm:text-lg mb-8 leading-relaxed">
+        Blackmatter — ruang lahirnya logo, editing, dan seni visual untuk generasi modern.
+        Profil kreatif, karya orisinal, dan jasa desain premium tersedia di sini.
+      </p>
+      <a href="#collab"
+         class="inline-block bg-gradient-to-r from-gray-200 to-white text-black font-semibold px-6 sm:px-8 py-3 rounded-full shadow-lg hover:scale-105 hover:shadow-2xl transition-all duration-300">
+        Lihat Kolaborasi
+      </a>
+    </div>
+  </section>
 
-        <!-- Gradien untuk garis sweep -->
-        <linearGradient id="sweepGrad" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%"   stop-color="rgba(255,255,255,0)" />
-          <stop offset="45%"  stop-color="rgba(255,255,255,1)" />
-          <stop offset="55%"  stop-color="rgba(255,255,255,0.85)" />
-          <stop offset="100%" stop-color="rgba(255,255,255,0)" />
-        </linearGradient>
-
-        <!-- Sun-brush (flare) putih -->
-        <radialGradient id="flare" cx="50%" cy="50%" r="50%">
-          <stop offset="0%"   stop-color="#ffffff"/>
-          <stop offset="65%"  stop-color="rgba(255,255,255,0.25)"/>
-          <stop offset="100%" stop-color="rgba(255,255,255,0)"/>
-        </radialGradient>
-      </defs>
-
-      <!-- 1) Logo dasar (redup) untuk visibilitas bentuk -->
-      <use href="#logoSrc" opacity="0.22"></use>
-
-      <!-- 2) Aura glow putih — dikurung mask agar hanya di logo -->
-      <g style="mix-blend-mode:screen" filter="url(#softGlow)" mask="url(#logoMask)">
-        <rect x="0" y="0" width="1600" height="700" fill="#ffffff" opacity="0.96"></rect>
-      </g>
-
-      <!-- 3) Garis sweep putih (tajam) melintas di dalam logo -->
-      <g mask="url(#logoMask)" style="mix-blend-mode:screen" opacity="0.95">
-        <rect id="sweep" x="-400" y="210" width="350" height="280" fill="url(#sweepGrad)" transform="skewX(-10)"></rect>
-        <animate xlink:href="#sweep" attributeName="x" from="-400" to="1700" dur="7s" repeatCount="indefinite"/>
-      </g>
-
-      <!-- 4) Sun-brush di ujung kiri & kanan logo -->
-      <!-- Posisi diset untuk rasio 1600×700; geser cx/cy kalau perlu -->
-      <g mask="url(#logoMask)" style="mix-blend-mode:screen">
-        <ellipse cx="340"  cy="420" rx="130" ry="70" fill="url(#flare)"/>
-        <ellipse cx="1260" cy="420" rx="130" ry="70" fill="url(#flare)"/>
-      </g>
-    </svg>
-  </div>
-
-  <!-- Vignette tipis supaya tetap elegan (tanpa nyebar ke luar logo) -->
-  <div class="pointer-events-none absolute inset-0"
-       style="background:
-         radial-gradient(900px 420px at 50% 55%, rgba(255,255,255,.07), transparent 60%),
-         radial-gradient(1400px 800px at 50% -10%, rgba(0,0,0,.6), transparent 70%);">
-  </div>
-
-  <!-- Konten -->
-  <div class="relative z-10 max-w-3xl px-4">
-    <h2 class="text-4xl sm:text-5xl md:text-7xl font-extrabold text-white leading-tight mb-4 sm:mb-6 drop-shadow-lg">
-      The void <br class="hidden sm:block"> speaks through my art
-    </h2>
-    <p class="text-gray-300 text-base sm:text-lg mb-8 leading-relaxed">
-      Blackmatter — ruang lahirnya logo, editing, dan seni visual untuk generasi modern.
-      Profil kreatif, karya orisinal, dan jasa desain premium tersedia di sini.
-    </p>
-    <a href="#collab"
-       class="inline-block bg-gradient-to-r from-gray-200 to-white text-black font-semibold px-6 sm:px-8 py-3 rounded-full shadow-lg hover:scale-105 hover:shadow-2xl transition-all duration-300">
-      Lihat Kolaborasi
-    </a>
-  </div>
-</section>
-
-  <!-- ====================== PROFILE (HERO + ABOUT + SERVICES PREVIEW) ====================== -->
+  <!-- ====================== PROFILE ====================== -->
   <section id="profile" class="relative bg-black text-gray-300">
-    <!-- METALLIC BLUR BACKDROP -->
     <div class="pointer-events-none absolute inset-0">
       <div class="absolute inset-0 bg-[radial-gradient(1100px_520px_at_50%_-8%,rgba(255,255,255,0.12),transparent_60%)]"></div>
       <div class="absolute inset-0 blur-2xl opacity-70 bg-[conic-gradient(from_210deg_at_60%_40%,rgba(255,255,255,0.06),transparent_20%,rgba(255,255,255,0.10),transparent_60%)]"></div>
     </div>
 
-    <!-- HERO -->
     <div class="relative max-w-7xl mx-auto px-6 pt-16 pb-10 grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
-      <!-- Left: headline (glass) -->
       <div class="rounded-3xl bg-white/[0.04] backdrop-blur-xl border border-white/10 p-6">
         <p class="uppercase tracking-widest text-[11px] text-gray-300/90">Hi There!</p>
         <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold text-white">
@@ -208,7 +229,6 @@
         </div>
       </div>
 
-      <!-- Right: hero image (glass) -->
       <div class="relative rounded-3xl overflow-hidden bg-white/[0.04] backdrop-blur-xl border border-white/10">
         <div class="absolute -inset-4 rounded-3xl bg-gradient-to-br from-white/10 to-transparent blur-2xl"></div>
         <img src="images/Background.jpg"
@@ -217,7 +237,6 @@
       </div>
     </div>
 
-    <!-- ABOUT -->
     <div class="relative border-t border-white/10"></div>
     <div class="relative max-w-7xl mx-auto px-6 py-14 grid grid-cols-1 lg:grid-cols-[380px,1fr] gap-10">
       <div class="rounded-3xl overflow-hidden border border-white/10 bg-white/[0.04] backdrop-blur-xl">
@@ -262,8 +281,6 @@
     </h2>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-
-      <!-- CARD: Custom Logo -->
       <a href="custom-logo.html"
          class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
@@ -277,7 +294,6 @@
         <div class="pointer-events-none absolute inset-0 rounded-2xl ring-0 ring-white/0 group-hover:ring-2 group-hover:ring-white/20 transition"></div>
       </a>
 
-      <!-- CARD: Accessories -->
       <a href="accesories.html"
          class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
@@ -291,7 +307,6 @@
         <div class="pointer-events-none absolute inset-0 rounded-2xl ring-0 ring-white/0 group-hover:ring-2 group-hover:ring-white/20 transition"></div>
       </a>
 
-      <!-- CARD: Outfit -->
       <a href="outfit.html"
          class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
@@ -304,7 +319,6 @@
         </div>
         <div class="pointer-events-none absolute inset-0 rounded-2xl ring-0 ring-white/0 group-hover:ring-2 group-hover:ring-white/20 transition"></div>
       </a>
-
     </div>
   </section>
 
@@ -321,7 +335,6 @@
       </h2>
 
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <!-- Left: Blackmatter card -->
         <div class="rounded-3xl border border-white/10 bg-white/[0.04] backdrop-blur-xl overflow-hidden">
           <div class="relative h-56">
             <img src="images/Background.jpg" class="absolute inset-0 w-full h-full object-cover opacity-80" alt="Blackmatter">
@@ -337,7 +350,6 @@
           </div>
         </div>
 
-        <!-- Right: graffiello_v card -->
         <div class="rounded-3xl border border-white/10 bg-white/[0.06] backdrop-blur-xl overflow-hidden">
           <div class="relative h-56">
             <img src="images/logo.png" class="absolute inset-0 w-full h-full object-contain bg-white" alt="graffiello_v">
@@ -354,7 +366,6 @@
         </div>
       </div>
 
-      <!-- Split preview mini -->
       <div class="mt-6 rounded-3xl border border-white/10 bg-black/40 backdrop-blur-xl p-5">
         <div class="grid grid-cols-2 gap-4">
           <div class="rounded-xl overflow-hidden border border-white/10 bg-white/[0.03]">
@@ -478,7 +489,6 @@
       </div>
     </div>
 
-    <!-- marquee styles -->
     <style>
       @keyframes sponsors-marquee{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
       #sponsors .marquee{width:200%;animation:sponsors-marquee 28s linear infinite}
@@ -526,5 +536,3 @@
   </script>
 </body>
 </html>
-
-
