--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
           <img src="images/cuanity.png?v=2" onerror="this.onerror=null;this.src='images/cuanity.jpg?v=2';" alt="Sponsor 1"
                class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
         </a>
-        <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener noreferrer"
+          <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener noreferrer"
            class="group flex items-center justify-center h-16 sm:h-20 rounded-xl border border-white/10 bg-white/[0.02] hover:bg-white/[0.04] transition">
-          <img src="images/sponsors/logo-2.png" alt="Sponsor 2"
+          <img src="images/whoimmal.png?v=2" onerror="this.onerror=null;this.src='images/whoimmal.jpg?v=2';" alt="Sponsor 2"
                class="max-h-8 sm:max-h-10 opacity-70 group-hover:opacity-100 grayscale group-hover:grayscale-0 transition">
         </a>
         <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener noreferrer"
@@ -536,5 +536,6 @@
   </script>
 </body>
 </html>
+
 
 
