--- a/index.html
+++ b/index.html
@@ -186,74 +186,31 @@
   </section>
 
   <!-- SPONSORS -->
-  <section id="sponsors" class="relative bg-black py-20">
-    <div class="relative max-w-7xl mx-auto px-4 text-center">
-      <p class="text-xs tracking-[0.2em] text-gray-400 uppercase mb-2">Trusted by</p>
-      <h3 class="text-2xl sm:text-3xl font-extrabold text-white mb-12">Our Sponsors & Partners</h3>
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-y-10 gap-x-6 place-items-center">
-        <img src="./images/cuanity.png" alt="Sponsor 1" class="h-12 sm:h-14 object-contain opacity-80 hover:opacity-100 transition">
-        <img src="./images/whoimmal.png" alt="Sponsor 2" class="h-12 sm:h-14 object-contain opacity-80 hover:opacity-100 transition">
-        <img src="./images/sponsor3.png" alt="Sponsor 3" class="h-12 sm:h-14 object-contain opacity-80 hover:opacity-100 transition">
-        <img src="./images/sponsor4.png" alt="Sponsor 4" class="h-12 sm:h-14 object-contain opacity-80 hover:opacity-100 transition">
-        <img src="./images/sponsor5.png" alt="Sponsor 5" class="h-12 sm:h-14 object-contain opacity-80 hover:opacity-100 transition">
+    <section id="sponsors" class="relative bg-black py-16">
+      <div class="text-center mb-12">
+        <p class="text-xs tracking-[0.2em] text-gray-400 uppercase">Trusted by</p>
+        <h3 class="mt-2 text-2xl sm:text-3xl font-extrabold text-white">
+          Our Sponsors & Partners
+        </h3>
       </div>
-    </div>
 
-    <style>
-      @keyframes sponsors-marquee { 0% { transform: translateX(0) } 100% { transform: translateX(-50%) } }
-      #sponsors .marquee { width: 200%; animation: sponsors-marquee 28s linear infinite }
-      #sponsors .marquee:hover { animation-play-state: paused }
-    </style>
-  </section>
+      <!-- GRID LOGO -->
+      <div
+        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-y-10 sm:gap-y-12 gap-x-10 place-items-center"
+      >
+        <a href="https://www.instagram.com/cuanity.co/" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
+          <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
+        </a>
+        <img src="images/w.png" alt="Sponsor W" class="max-h-20 mx-auto" />
+        <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
+        <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
+        <img src="images/sponsor5.png" alt="Sponsor 5" class="max-h-20 mx-auto" />
+      </div>
+    </section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="py-12 bg-gradient-to-b from-gray-900 to-black text-center">
-    <h2 class="text-2xl font-bold mb-2">Contact</h2>
-    <p class="text-gray-400 mb-6">Temukan saya di platform berikut:</p>
-    <div class="flex justify-center gap-10">
-      <a href="https://www.instagram.com/blackmttr" target="_blank" class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="./images/instagram.png" alt="Instagram" class="h-12 w-12 object-contain">
-        <span class="text-white">@blackmttr</span>
-      </a>
-      <a href="https://www.tiktok.com/@_itsgal" target="_blank" class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="./images/tiktok.png" alt="TikTok" class="h-12 w-12 object-contain">
-        <span class="text-white">@_itsgal</span>
-      </a>
-      <a href="https://www.behance.net/g632" target="_blank" class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="./images/behance.png" alt="Behance" class="h-12 w-12 object-contain">
-        <span class="text-white">/g632</span>
-      </a>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="py-2 text-center bg-black border-t border-gray-800">
-    <p class="text-gray-500 text-sm">© 2025 Blackmatter. All rights reserved.</p>
-  </footer>
-
-  <!-- JS: Mobile Menu -->
-  <script>
-    const btn = document.getElementById('menuBtn');
-    const panel = document.getElementById('menuPanel');
-    const iconOpen = document.getElementById('iconOpen');
-    const iconClose = document.getElementById('iconClose');
-
-    btn.addEventListener('click', () => {
-      const isHidden = panel.classList.toggle('hidden');
-      btn.setAttribute('aria-expanded', String(!isHidden));
-      iconOpen.classList.toggle('hidden');
-      iconClose.classList.toggle('hidden');
-    });
-
-    panel.querySelectorAll('a').forEach(a => {
-      a.addEventListener('click', () => {
-        panel.classList.add('hidden');
-        btn.setAttribute('aria-expanded', 'false');
-        iconOpen.classList.remove('hidden');
-        iconClose.classList.add('hidden');
-      });
-    });
-  </script>
-
-</body>
+    <!-- FOOTER -->
+    <footer class="text-center py-6 border-t border-white/10 text-gray-400 text-sm">
+      © 2025 Blackmatter. All rights reserved.
+    </footer>
+  </body>
 </html>
