--- a/index.html
+++ b/index.html
@@ -184,7 +184,34 @@
       </div>
     </div>
   </section>
+ <!-- CONTACT -->
+    <section id="contact" class="relative bg-gradient-to-b from-black via-neutral-900 to-black py-16">
+      <div class="text-center mb-10">
+        <h2 class="text-3xl font-bold text-white">Contact</h2>
+        <p class="text-gray-400 mt-2">Temukan saya di platform berikut:</p>
+      </div>
 
+      <div class="flex justify-center gap-12 text-center">
+        <div>
+          <a href="https://instagram.com/blackmttr" target="_blank">
+            <img src="images/ig.png" alt="Instagram" class="h-10 mx-auto mb-2" />
+            <p>@blackmttr</p>
+          </a>
+        </div>
+        <div>
+          <a href="https://www.tiktok.com/@_itsgal" target="_blank">
+            <img src="images/tiktok.png" alt="TikTok" class="h-10 mx-auto mb-2" />
+            <p>@_itsgal</p>
+          </a>
+        </div>
+        <div>
+          <a href="https://www.behance.net/g632" target="_blank">
+            <img src="images/behance.png" alt="Behance" class="h-10 mx-auto mb-2" />
+            <p>/g632</p>
+          </a>
+        </div>
+      </div>
+    </section>
   <!-- SPONSORS -->
     <section id="sponsors" class="relative bg-black py-16">
       <div class="text-center mb-12">
@@ -214,3 +241,4 @@
     </footer>
   </body>
 </html>
+
