--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
       </div>
     </div>
   </section>
+  
  <!-- CONTACT -->
     <section id="contact" class="relative bg-gradient-to-b from-black via-neutral-900 to-black py-16">
       <div class="text-center mb-10">
@@ -212,6 +213,7 @@
         </div>
       </div>
     </section>
+  
   <!-- SPONSORS -->
     <section id="sponsors" class="relative bg-black py-16">
       <div class="text-center mb-12">
@@ -228,7 +230,7 @@
         <a href="https://www.instagram.com/cuanity.co/" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
           <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
         </a>
-        <img src="images/w.png" alt="Sponsor W" class="max-h-20 mx-auto" />
+        <img src="images/whoimmal.png" alt="Sponsor W" class="max-h-20 mx-auto" />
         <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
         <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
         <img src="images/sponsor5.png" alt="Sponsor 5" class="max-h-20 mx-auto" />
@@ -241,4 +243,5 @@
     </footer>
   </body>
 </html>
+
 
