--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div class="flex justify-center gap-12 text-center">
         <div>
           <a href="https://instagram.com/blackmttr" target="_blank">
-            <img src="images/ig.png" alt="Instagram" class="h-10 mx-auto mb-2" />
+            <img src="images/instagram.png" alt="Instagram" class="h-10 mx-auto mb-2" />
             <p>@blackmttr</p>
           </a>
         </div>
@@ -230,7 +230,9 @@
         <a href="https://www.instagram.com/cuanity.co/" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
           <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
         </a>
-        <img src="images/whoimmal.png" alt="Sponsor W" class="max-h-20 mx-auto" />
+       <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
+          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-20 mx-auto" />
+        </a>
         <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
         <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
         <img src="images/sponsor5.png" alt="Sponsor 5" class="max-h-20 mx-auto" />
@@ -243,5 +245,6 @@
     </footer>
   </body>
 </html>
+
 
 
