--- a/index.html
+++ b/index.html
@@ -230,8 +230,11 @@
         <a href="https://www.instagram.com/cuanity.co/" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
           <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
         </a>
+        <div
+        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-y-10 sm:gap-y-12 gap-x-10 place-items-center"
+      >
        <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
-          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-20 mx-auto" />
+          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-10 mx-auto" />
         </a>
         <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
         <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
@@ -245,6 +248,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
