--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
         </a>
        <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="transition-transform hover:scale-110">
-          <img src="images/whoimmal.png" alt="whoimmal" class="class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
+          <img src="images/whoimmal.png" alt="whoimmal" class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
         </a>
         <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
         <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
@@ -245,6 +245,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
