--- a/index.html
+++ b/index.html
@@ -231,13 +231,41 @@
           <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
         </a>
        <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="transition-transform hover:scale-100">
-          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-50 mx-50" />
+          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-20 mx-20" />
        </a>
         <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
         <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
         <img src="images/sponsor5.png" alt="Sponsor 5" class="max-h-20 mx-auto" />
       </div>
     </section>
+   <!-- MARQUEE (desktop) TANPA BACKGROUND JUGA -->
+    <div class="mt-12 hidden md:block">
+      <div class="relative overflow-hidden">
+        <div class="marquee flex items-center gap-16 p-2">
+          <img src="images/cuanity.png" onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-2.png" alt="Sponsor 2" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+
+          <!-- duplikasi untuk loop mulus -->
+          <img src="../images/cuanity.png" onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="../images/sponsors/logo-2.png" alt="Sponsor 2" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="../images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="../images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="../images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <style>
+    @keyframes sponsors-marquee { 0% { transform: translateX(0) } 100% { transform: translateX(-50%) } }
+    #sponsors .marquee { width: 200%; animation: sponsors-marquee 28s linear infinite }
+    #sponsors .marquee:hover { animation-play-state: paused }
+  </style>
+</section>
+
 
     <!-- FOOTER -->
     <footer class="text-center py-6 border-t border-white/10 text-gray-400 text-sm">
@@ -245,6 +273,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
