--- a/index.html
+++ b/index.html
@@ -231,13 +231,14 @@
           <img src="images/cuanity.png" alt="Cuanity" class="max-h-20 mx-auto" />
         </a>
        <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="transition-transform hover:scale-100">
-          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-20 mx-20" />
+          <img src="images/whoimmal.png" alt="whoimmal" class="max-h-20 mx-10" />
        </a>
         <img src="images/sponsor3.png" alt="Sponsor 3" class="max-h-20 mx-auto" />
         <img src="images/sponsor4.png" alt="Sponsor 4" class="max-h-20 mx-auto" />
         <img src="images/sponsor5.png" alt="Sponsor 5" class="max-h-20 mx-auto" />
       </div>
     </section>
+  
    <!-- MARQUEE (desktop) TANPA BACKGROUND JUGA -->
     <div class="mt-12 hidden md:block">
       <div class="relative overflow-hidden">
@@ -249,11 +250,11 @@
           <img src="images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
 
           <!-- duplikasi untuk loop mulus -->
-          <img src="../images/cuanity.png" onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-2.png" alt="Sponsor 2" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/cuanity.png" onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-2.png" alt="Sponsor 2" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
         </div>
       </div>
     </div>
@@ -273,6 +274,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
