--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Blackmatter</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="../images/B.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="./images/B.png" type="image/png" sizes="32x32">
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -18,7 +18,7 @@
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <!-- Logo -->
       <a href="#home" class="flex items-center">
-        <img src="../images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
+        <img src="./images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
       </a>
 
       <!-- Menu Desktop -->
@@ -439,3 +439,4 @@
   </script>
 </body>
 </html>
+
