--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- Right: hero image (glass) -->
     <div class="relative rounded-3xl overflow-hidden bg-white/[0.04] backdrop-blur-xl border border-white/10">
       <div class="absolute -inset-4 rounded-3xl bg-gradient-to-br from-white/10 to-transparent blur-2xl"></div>
-      <img src="../images/Background.jpg"
+      <img src="./images/Background.jpg"
            alt="Profile"
            class="relative w-full h-[420px] object-cover" />
     </div>
@@ -138,7 +138,7 @@
   <div class="relative max-w-7xl mx-auto px-6 py-14 grid grid-cols-1 lg:grid-cols-[380px,1fr] gap-10">
     <!-- About image (glass) -->
     <div class="rounded-3xl overflow-hidden border border-white/10 bg-white/[0.04] backdrop-blur-xl">
-      <img src="../images/itsgal.jpg" alt="About" class="w-full h-full object-cover">
+      <img src="./images/itsgal.jpg" alt="About" class="w-full h-full object-cover">
     </div>
 
     <!-- About text -->
@@ -439,4 +439,5 @@
   </script>
 </body>
 </html>
+
 
